--- a/plugin.xml
+++ b/plugin.xml
@@ -9,23 +9,27 @@
     <access_request>
         <field table="cc" field="sectionid" access="ViewOnly" />
         <field table="cc" field="studentid" access="ViewOnly" />
+
         <field table="courses" field="course_name" access="ViewOnly" />
         <field table="courses" field="course_number" access="ViewOnly" />
-        <field table="sections" field="id" access="ViewOnly" />
+
         <field table="sections" field="course_number" access="ViewOnly" />
+        <field table="sections" field="dcid" access="ViewOnly" />
         <field table="sections" field="external_expression" access="ViewOnly" />
+        <field table="sections" field="id" access="ViewOnly" />
         <field table="sections" field="no_of_students" access="ViewOnly" />
         <field table="sections" field="room" access="ViewOnly" />
         <field table="sections" field="teacher" access="ViewOnly" />
         <field table="sections" field="termid" access="ViewOnly" />
+
         <field table="students" field="dcid" access="ViewOnly" />
-        <field table="students" field="student_number" access="ViewOnly" />
         <field table="students" field="first_name" access="ViewOnly" />
-        <field table="students" field="last_name" access="ViewOnly" />
-        <field table="students" field="lastfirst" access="ViewOnly" />
         <field table="students" field="gender" access="ViewOnly" />
         <field table="students" field="grade_level" access="ViewOnly" />
         <field table="students" field="id" access="ViewOnly" />
+        <field table="students" field="last_name" access="ViewOnly" />
+        <field table="students" field="lastfirst" access="ViewOnly" />
+        <field table="students" field="student_number" access="ViewOnly" />
     </access_request>
     <publisher name="North Raleigh Christian Academy">
         <contact email="github@nrcaknights.com"/>
