Add a new PowerQuery for getting sections by course number
Cleaned up some code and renamed a few endpoints for consistency.

--- a/plugin.xml
+++ b/plugin.xml
@@ -19,6 +19,7 @@
         <field table="sections" field="id" access="ViewOnly" />
         <field table="sections" field="no_of_students" access="ViewOnly" />
         <field table="sections" field="room" access="ViewOnly" />
+        <field table="sections" field="section_number" access="ViewOnly" />
         <field table="sections" field="teacher" access="ViewOnly" />
         <field table="sections" field="termid" access="ViewOnly" />
 
